LIB-718: Prevent word wrapping on safari

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,11 +7,7 @@ main {
 }
 
 .prism-code > * {
-  /*
-   * Prevents code block from overflowing on extremely
-   * long words
-   */
-  word-break: break-all;
+  white-space: nowrap !important;
 }
 
 .prism-code > div { /* codeBlockLines */
